force-app/main/default/objects/Expense__c/fields/Approval_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Formula__c</fullName>
    <formula>CASE( Approval_Status__c , &apos;Approved&apos;, &apos;Approved&apos;, &apos;Rejected&apos;, &apos;Rejected&apos;, &apos;Pending&apos;, &apos;Pending&apos;, &apos;Not Submitted&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>