force-app/main/default/objects/Expense__c/fields/ApprovalChek__c.field-meta.xml
<CustomField>
    <fullName>ApprovalChek__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ApprovalChek</label>
    <type>Checkbox</type>
</CustomField>