force-app/main/default/objects/Expense__c/fields/Expense_Comments__c.field-meta.xml
<CustomField>
    <fullName>Expense_Comments__c</fullName>
    <label>Expense Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>