force-app/main/default/objects/Expense__c/fields/RejectCheck__c.field-meta.xml
<CustomField>
    <fullName>RejectCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RejectCheck</label>
    <type>Checkbox</type>
</CustomField>