force-app/main/default/objects/Expense__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>CASE(Approval_Status_Formula__c, &apos;Approved&apos;, IMAGE(&quot;/resource/Approved&quot;, &quot;Rejected&quot;,140,140), &apos;Rejected&apos;, IMAGE(&quot;/resource/Rejected&quot;, &quot;Rejected&quot;,150,175),&apos;Pending&apos;,IMAGE(&quot;/resource/Pending&quot;, &quot;Pending&quot;,140,140),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>