force-app/main/default/objects/Expense__c/validationRules/DA_expense_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>DA_expense_limit</fullName>
    <active>true</active>
    <errorConditionFormula>DA__c &gt; 5000</errorConditionFormula>
    <errorDisplayField>DA__c</errorDisplayField>
    <errorMessage>Please Enter DA below Rs.5000</errorMessage>
</ValidationRule>