force-app/main/default/objects/Expense__c/validationRules/Expense2days.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense2days</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Expense_Date__c  &lt;  TODAY() -2 ,ISNEW() )</errorConditionFormula>
    <errorDisplayField>Expense_Date__c</errorDisplayField>
    <errorMessage>you can&apos;t submit more then 2 working days back expense</errorMessage>
</ValidationRule>