force-app/main/default/objects/Expense__c/validationRules/Other_expense_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_expense_limit</fullName>
    <active>true</active>
    <errorConditionFormula>Other_Expenses__c  &gt; 5000</errorConditionFormula>
    <errorMessage>Please enter other expense below Rs.5000</errorMessage>
</ValidationRule>