force-app/main/default/objects/Expense__c/validationRules/TA_limit_5000.validationRule-meta.xml
<ValidationRule>
    <fullName>TA_limit_5000</fullName>
    <active>true</active>
    <errorConditionFormula>TA__c  &gt; 5000</errorConditionFormula>
    <errorMessage>Please enter TA below Rs.5000</errorMessage>
</ValidationRule>