force-app/main/default/objects/Expense__c/listViews/ALl1.listView-meta.xml
<ListView>
    <fullName>ALl1</fullName>
    <columns>NAME</columns>
    <columns>Expense_Date__c</columns>
    <columns>Approval_Status_Formula__c</columns>
    <columns>TA__c</columns>
    <columns>DA__c</columns>
    <columns>Other_Expenses__c</columns>
    <columns>Total_Expense__c</columns>
    <columns>Expense_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALl</label>
</ListView>