force-app/main/default/objects/Expense__c/listViews/Pending_Approvals.listView-meta.xml
<ListView>
    <fullName>Pending_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Expense_Date__c</columns>
    <columns>Approval_Status_Formula__c</columns>
    <columns>TA__c</columns>
    <columns>DA__c</columns>
    <columns>Other_Expenses__c</columns>
    <columns>Total_Expense__c</columns>
    <columns>Expense_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Approvals</label>
</ListView>